--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,7 +96,7 @@ message("CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")
 
 # Sources
 file( GLOB canaryHttp
-  ${Source}/canary/http/*.c
+  ${Source}/async_parallel/*.cc
   ${Source}/async_parallel/*.h
   ${Source}/canary/*.cc
   ${Source}/heart/*.h
