steps deep into code analysers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,15 +72,36 @@ elseif (MSVC90)
   #set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
   LINK_LIBRARIES(ws2_32 WSnmp32 libboost_system-vc90-mt-1_57)# libboost_thread-vc90-mt-s-1_57.lib)
 elseif (UNIX)
+  # gcc 4.8 ubuntu 12 http://llvm.org/docs/GettingStarted.html#getting-a-modern-host-c-toolchain
+  # cmake .. -DCMAKE_CXX_LINK_FLAGS="-Wl,-rpath,$HOME/toolchains/lib64 -L$HOME/toolchains/lib64"
+  # http://llvm.org/docs/GettingStarted.html#getting-a-modern-host-c-toolchain
+
   if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+    # Static analyser http://clang-analyzer.llvm.org/
+    # https://github.com/couchbase/couchnode/blob/master/deps/lcb/cmake/Modules/GetLibcouchbaseFlags.cmake
+    # http://blogs.perl.org/users/rurban/2011/11/adventures-with-clang-and-asan.html
+    #IF(LCB_USE_ASAN)
+# main: address - thread, memory and ub not work in i686, only x86_64
+#-fno-omit-frame-pointer -O1
+SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g  -fsanitize=address")
+#-fno-omit-frame-pointer -O1
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -g  -fsanitize=address")
+# -undefined dynamic_lookup
+        SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS}  -fsanitize=address")
+        SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address")
+    #ENDIF()
     # TOOLS:
     #
+    # https://code.google.com/p/address-sanitizer/wiki/HowToBuild
+    # http://cameo54321.blogspot.ru/2014/02/installing-cmake-288-or-higher-on.html
     # clang 3.1 >= need for ASan Ub12.04 -> 3.0
+    #
     # !!https://solarianprogrammer.com/2013/01/17/building-clang-libcpp-ubuntu-linux/
     # Try it! https://github.com/pacs-course/pacs/wiki/Instructions-to-install-clang-3.1-on-ubuntu-12.04.1-and-12.10
     # http://stackoverflow.com/questions/17657261/how-to-install-clang-pre-built-binaries-ubuntu-12-04
     # http://sohanikh.blogspot.ru/2013/02/how-to-build-llvm-from-source-on-ubuntu.html
     add_definitions(  -Wall -g -fsanitize=address)
+    # https://developer.mozilla.org/en-US/docs/Mozilla/Testing/Firefox_and_Address_Sanitizer
     message("I'm clang")
     link_directories(${BigExtern}/boost_1_57_0/stage_gcc/lib)
     link_libraries(tbb tbbmalloc boost_system boost_thread pthread rt)  # !! pthread and rt last!!
@@ -95,6 +116,14 @@ elseif (UNIX)
       # http://stackoverflow.com/questions/11944060/how-to-detect-target-architecture-using-cmake
       #  message( STATUS "Architecture: ${ARCHITECTURE}" ) # not work
     else()
+      IF(LCB_USE_VALGRIND)
+          # -pg
+          #SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-omit-frame-pointer -fsanitize=address")
+          #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-omit-frame-pointer -fsanitize=address")
+          #SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -undefined dynamic_lookup -fsanitize=address")
+          #SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address")
+      ENDIF()
+
       message("I'm NOT ARM processor")
       link_directories(${BigExtern}/boost_1_57_0/stage_gcc/lib)
       # how split embedded form just linux
